traversal.snake.Snake.scala.error
Compilation error:
Snake:19: error: not found: value rigth
        rigth()
        ^